Fix the styling on the heading and dark mode toggle button so the blue background is removed and the gray background behind the icon shows.

--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,4 @@
-
- html {
+html {
   box-sizing: border-box;
 }
 *, *:before, *:after {
@@ -32,55 +31,6 @@ body {
   font-size: 2em;
   color: #f00;
   margin: auto 0.3em;
-}
-
-
-/* dark mode  */
-body.dark-theme {
-  background-color: #000;
-  color: #fff;
-}
-body.dark-theme nav {
-  background-image: url("https://www.transparenttextures.com/patterns/asfalt-light.png");
-  background-color: #000;
-}
-
-body.dark-theme header {
-  background-color: #000;
-}
-
-body.dark-theme textarea {
-  border-color: #657786;
-}
-
-body.dark-theme article {
-  border: 3px solid #657786;
-  box-shadow: 0px 6px 10px;
-}
-
-body.dark-theme .icon {
-  background-color: #000;
-}
-
-body.dark-theme article:hover {
-  box-shadow: 13px 13px 21px rgb(46 155 223);
-}
-
-body.dark-theme .name {
-  color: #fff;
-}
-
-body.dark-theme .profile-pic {
-  margin-right: 0.5em;
-}
-
-body.dark-theme .btn-toggle > i {
-  color: rgb(239, 239, 239);
-}
-
-body.dark-theme .dark-mode {
-  border: 1px solid;
-  border-radius: 50%;
 }
 
 /* response design */
@@ -145,7 +95,7 @@ body.dark-theme .dark-mode {
 @media only screen and (min-width: 1024px) {
   .header {
     background-image: none;
-    background-color: none !important;
+    background-color: transparent !important;
     margin-top: 5em;
     width: 33.3%;
     float: left;
